Criação da Propriedade WelcomeMessage no RestClient.  Criação da Propriedade WelcomeMessage no Database.  Criação do Evento OnWelcomeMessage nas Classes do Servidor.
git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@411 5a50b8e4-c46e-494c-8199-665086288703

--- a/CORE/Samples/SimpleServer/Server/Lazarus/uDmService.lfm
+++ b/CORE/Samples/SimpleServer/Server/Lazarus/uDmService.lfm
@@ -2,6 +2,7 @@ object ServerMethodDM: TServerMethodDM
   OnCreate = ServerMethodDataModuleCreate
   OldCreateOrder = False
   OnReplyEvent = ServerMethodDataModuleReplyEvent
+  OnWelcomeMessage = DataModuleWelcomeMessage
   Height = 255
   HorizontalOffset = 737
   VerticalOffset = 244
