--- a/CORE/Samples/SimpleServer/Client/Lazarus/formMain.lfm
+++ b/CORE/Samples/SimpleServer/Client/Lazarus/formMain.lfm
@@ -1104,8 +1104,9 @@ object Form2: TForm2
     top = 328
   end
   object RESTDWDataBase1: TRESTDWDataBase
-    Active = False
+    Active = True
     Compression = True
+    MyIP = '127.0.0.1'
     Login = 'testserver'
     Password = 'testserver'
     Proxy = False
@@ -1129,7 +1130,61 @@ object Form2: TForm2
   end
   object RESTDWClientSQL1: TRESTDWClientSQL
     Active = False
-    FieldDefs = <>
+    FieldDefs = <    
+      item
+        Name = 'EMP_NO'
+        DataType = ftSmallint
+        Precision = -1
+      end    
+      item
+        Name = 'FIRST_NAME'
+        DataType = ftString
+        Size = 15
+      end    
+      item
+        Name = 'LAST_NAME'
+        DataType = ftString
+        Size = 20
+      end    
+      item
+        Name = 'PHONE_EXT'
+        DataType = ftString
+        Size = 4
+      end    
+      item
+        Name = 'HIRE_DATE'
+        DataType = ftDateTime
+      end    
+      item
+        Name = 'DEPT_NO'
+        DataType = ftString
+        Size = 3
+      end    
+      item
+        Name = 'JOB_CODE'
+        DataType = ftString
+        Size = 5
+      end    
+      item
+        Name = 'JOB_GRADE'
+        DataType = ftSmallint
+        Precision = -1
+      end    
+      item
+        Name = 'JOB_COUNTRY'
+        DataType = ftString
+        Size = 15
+      end    
+      item
+        Name = 'SALARY'
+        DataType = ftFloat
+        Precision = -1
+      end    
+      item
+        Name = 'FULL_NAME'
+        DataType = ftString
+        Size = 37
+      end>
     MasterCascadeDelete = True
     Inactive = False
     DataCache = False
