--- a/CORE/Samples/ClientBLOB/Lazarus/Unit1.lfm
+++ b/CORE/Samples/ClientBLOB/Lazarus/Unit1.lfm
@@ -699,10 +699,21 @@ object Form5: TForm5
     MasterCascadeDelete = True
     Inactive = False
     DataCache = False
-    Params = <>
+    Params = <    
+      item
+        DataType = ftInteger
+        Name = 'ID_PESSOA'
+        ParamType = ptInput
+      end    
+      item
+        DataType = ftString
+        Name = 'NM_LOGIN'
+        ParamType = ptInput
+        Size = 30
+      end>
     DataBase = RESTDWDataBase1
     SQL.Strings = (
-      'select * from TB_USUARIO'
+      'SELECT * FROM TB_USUARIO WHERE ID_PESSOA = :ID_PESSOA or NM_LOGIN like upper(:NM_LOGIN)'
     )
     CacheUpdateRecords = True
     left = 291
