Ajuste de exemplo.
git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@431 5a50b8e4-c46e-494c-8199-665086288703

--- a/CORE/Samples/ClientBLOB/Lazarus/Unit1.lfm
+++ b/CORE/Samples/ClientBLOB/Lazarus/Unit1.lfm
@@ -713,7 +713,7 @@ object Form5: TForm5
       end>
     DataBase = RESTDWDataBase1
     SQL.Strings = (
-      'SELECT * FROM TB_USUARIO WHERE ID_PESSOA = :ID_PESSOA or NM_LOGIN like upper(:NM_LOGIN)'
+      'SELECT * FROM TB_USUARIO'
     )
     CacheUpdateRecords = True
     left = 291
