--- a/CORE/Samples/ClientBLOB/Lazarus/Unit1.lfm
+++ b/CORE/Samples/ClientBLOB/Lazarus/Unit1.lfm
@@ -13,7 +13,7 @@ object Form5: TForm5
   Font.Height = -11
   Font.Name = 'Tahoma'
   Position = poScreenCenter
-  LCLVersion = '1.6.4.0'
+  LCLVersion = '1.8.0.4'
   object Label4: TLabel
     Left = 8
     Height = 13
@@ -699,18 +699,7 @@ object Form5: TForm5
     MasterCascadeDelete = True
     Inactive = False
     DataCache = False
-    Params = <    
-      item
-        DataType = ftInteger
-        Name = 'ID_PESSOA'
-        ParamType = ptInput
-      end    
-      item
-        DataType = ftString
-        Name = 'NM_LOGIN'
-        ParamType = ptInput
-        Size = 30
-      end>
+    Params = <>
     DataBase = RESTDWDataBase1
     SQL.Strings = (
       'SELECT * FROM TB_USUARIO'
@@ -760,6 +749,7 @@ object Form5: TForm5
   object RESTDWDataBase1: TRESTDWDataBase
     Active = False
     Compression = True
+    MyIP = '0.0.0.0'
     Login = 'testserver'
     Password = 'testserver'
     Proxy = False
@@ -776,6 +766,9 @@ object Form5: TForm5
     StrsEmpty2Null = False
     StrsTrim2Len = True
     WelcomeMessage = 'EMPLOYEE.FDB'
+    DateSeparator = '/'
+    TimeSeparator = ':'
+    DecimalSeparator = ','
     OnWork = RESTDWDataBase1Work
     OnWorkBegin = RESTDWDataBase1WorkBegin
     OnWorkEnd = RESTDWDataBase1WorkEnd
